--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     line-height: 1.6;
     background-color: #d56d6d;
     color: #333;
