--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: #fcf6f6;
-
+    font-style: oblique;
 }
 
 h1{
@@ -77,38 +77,3 @@ nav ul li a:hover {
     transition: transform 0.3s;
 }
 
-.card:hover {
-    transform: translateY(-10px);
-}
-
-.card h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.card p {
-    font-size: 1rem;
-    color: #f9f5f5;
-}
-
-/* Estilizando o rodapé */
-footer {
-    background-color: #fef6f6;
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-    margin-top: 40px;
-}
-
-/* Responsividade */
-@media screen and (max-width: 768px) {
-    .content {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .card {
-        width: 80%;
-        margin-bottom: 20px;
-    }
-}
