--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1{
 
 /* Estilizando o cabeçalho e a navegação */
 header {
-    background-color: #333;
+    background-color: #ffffff;
     padding: 1rem;
 }
 
@@ -42,21 +42,6 @@ nav ul li a:hover {
     color:
 }
 
-/* Seção Hero (imagem ou texto de destaque) */
-.hero {
-    background-color: 
-    color: 
-    text-align: center;
-    padding: 100px 20px;
-}
 
-.hero h1 {
-    font-size: 3rem;
-    margin-bottom: 20px;
-}
-
-.hero p {
-    font-size: 1.2rem;
-}
 
 
