--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 h1{
-    color:black
+    color:rgb(117, 4, 4)
 }
 
 /* Reset básico para garantir um estilo consistente em diferentes navegadores */
