--- a/style.css
+++ b/style.css
@@ -22,3 +22,17 @@ header {
     padding: 1rem;
 }
 
+/* Rodapé */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+footer p {
+    font-size: 1rem;
+}
